--- a/ddns.conf
+++ b/ddns.conf
@@ -1,4 +1,4 @@
-ACCOUNT="dnspod账号（腾讯云账号）"
-PASSWORD="密码"
+ACCOUNT="dnspod token 的id"
+PASSWORD="dospod token"
 DOMAIN="你的域名，（下面的默认一般不用改）"
 RECORD_LINE="默认"
